# azure-esp32-optiga-trust

./: PortingGuide.md  README.md  apply_patch_azure_iot.sh  diff.patch
components/esp-azure/port/: CMakeLists.txt
components/esp-azure/port/src/: agenttime_esp.c  socketio_esp_stub.c  tlsio_esp_tls.c
components/optiga/: CMakeLists.txt  Kconfig.projbuild
components/optiga/optiga-trust-m/documents/: OPTIGA_Trust_M_V3_Host_Library_Documentation.chm
components/optiga/optiga-trust-m/examples/mbedtls_port/: trustm_ecdh.c  trustm_ecdsa.c  trustm_rsa.c
components/optiga/optiga-trust-m/examples/optiga/: example_optiga_util_protected_update.c
components/optiga/optiga-trust-m/examples/optiga/protected_update_data_set/: example_optiga_util_protected_update.h
components/optiga/optiga-trust-m/examples/utilities/: optiga_trust.c
components/optiga/optiga-trust-m/optiga/cmd/: optiga_cmd.c
components/optiga/optiga-trust-m/optiga/comms/ifx_i2c/: ifx_i2c.c  ifx_i2c_config.c  (+1 more)
components/optiga/optiga-trust-m/pal/esp32_freertos/: pal_i2c.c  pal_ifx_i2c_config.c  pal_logger.c  pal_os_event.c
examples/dps_client_sample_mqtt/: CMakeLists.txt  Makefile  sdkconfig
examples/dps_client_sample_mqtt/main/: CMakeLists.txt  Kconfig.projbuild  custom_hsm_optiga.c  custom_hsm_optiga.h  dps_client_sample_mqtt.c
examples/iothub_client_sample_mqtt/: CMakeLists.txt  sdkconfig
examples/iothub_client_sample_mqtt/main/: CMakeLists.txt  azure_main.c
examples/provision_test_certificate/: CMakeLists.txt  sdkconfig
examples/provision_test_certificate/main/: CMakeLists.txt  main.c
(+5 files in other folders)
